@@ -9,14 +9,14 @@
   </parent>
 
   <groupId>com.tguzik</groupId>
-  <artifactId>valueclasses</artifactId>
-  <version>1.0.3-SNAPSHOT</version>
-  <packaging>jar</packaging>
+  <artifactId>valueclasses-parent</artifactId>
+  <version>2.0.0-SNAPSHOT</version>
+  <packaging>pom</packaging>
 
-  <name>ValueClasses</name>
+  <name>ValueClasses Parent POM</name>
   <url>https://github.com/tguzik/valueclasses</url>
   <description>
-    This library provides an easy to use template for implementing value classes that contain domain data.
+    This library provides an easy-to-use template for implementing value classes that contain domain data.
   </description>
 
   <licenses>
@@ -45,19 +45,12 @@
 
   <properties>
     <!-- Basics -->
+    <plugin-settings.directory>${project.basedir}/.mvn/plugins</plugin-settings.directory>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.language.version>1.7</java.language.version>
-    <java.jdk.version>1.7</java.jdk.version>
+    <jdk.release>17</jdk.release>
 
-    <!-- Build system and static code analysis -->
-    <linters.errorprone.version>2.4.0</linters.errorprone.version>
-    <linters.spotbugs.plugin.version>4.7.2.1</linters.spotbugs.plugin.version>
-    <linters.spotbugs.core.version>4.0.3</linters.spotbugs.core.version>
-    <linters.pmd.version>3.14.0</linters.pmd.version>
-
-    <!-- Unit tests and friends -->
-    <tests.junit.jupiter.launcher.version>1.9.1</tests.junit.jupiter.launcher.version>
-    <tests.junit.jupiter.version>5.9.1</tests.junit.jupiter.version>
+    <!-- Unit tests, static analysis and friends -->
+    <linters.errorprone.version>2.42.0</linters.errorprone.version>
   </properties>
 
   <developers>
@@ -70,131 +63,128 @@
 
   <profiles>
     <profile>
-      <id>javadoc</id>
+      <id>upgrades</id>
       <activation>
         <activeByDefault>false</activeByDefault>
       </activation>
       <build>
-        <defaultGoal>javadoc:javadoc</defaultGoal>
-        <plugins>
-          <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-javadoc-plugin</artifactId>
-            <version>3.4.0</version>
-            <configuration>
-              <fixTags>true</fixTags>
-              <additionalparam>-Xdoclint:none</additionalparam>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-
-    <profile>
-      <id>extra-jdk1.8-options</id>
-      <activation>
-        <jdk>1.8</jdk>
-      </activation>
-      <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-compiler-plugin</artifactId>
-              <configuration>
-                <!-- error_prone on jdk1.8 -->
-                <compilerId>javac-with-errorprone</compilerId>
-                <forceJavacCompilerUse>true</forceJavacCompilerUse>
-                <!-- /error_prone on jdk1.8 -->
-              </configuration>
-
-              <!-- error_prone on jdk1.8 -->
-              <dependencies>
-                <dependency>
-                  <groupId>org.codehaus.plexus</groupId>
-                  <artifactId>plexus-compiler-javac-errorprone</artifactId>
-                  <version>2.8.6</version>
-                </dependency>
-              </dependencies>
-              <!-- /error_prone on jdk1.8 -->
-
-              <inherited>true</inherited>
-            </plugin>
-          </plugins>
-        </pluginManagement>
-      </build>
-    </profile>
-
-    <profile>
-      <id>outdated</id>
-      <activation>
-        <activeByDefault>false</activeByDefault>
-      </activation>
-      <build>
-        <defaultGoal>versions:display-dependency-updates versions:display-plugin-updates</defaultGoal>
+        <defaultGoal>
+          versions:display-parent-updates
+          versions:display-property-updates
+          versions:display-dependency-updates
+          versions:display-plugin-updates
+        </defaultGoal>
       </build>
     </profile>
   </profiles>
 
-  <dependencies>
-    <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>jsr305</artifactId>
-      <version>3.0.2</version>
-    </dependency>
-    <dependency>
-      <groupId>com.tguzik</groupId>
-      <artifactId>annotations</artifactId>
-      <version>1.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.commons</groupId>
-      <artifactId>commons-lang3</artifactId>
-      <version>3.9</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.3.1</version>
-    </dependency>
+  <modules>
+    <module>valueclasses</module>
+    <module>valueclasses-legacy</module>
+  </modules>
 
-    <dependency>
-      <groupId>org.junit.platform</groupId>
-      <artifactId>junit-platform-launcher</artifactId>
-      <version>${tests.junit.jupiter.launcher.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>${tests.junit.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-      <version>${tests.junit.jupiter.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <version>4.9.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>3.23.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.jspecify</groupId>
+        <artifactId>jspecify</artifactId>
+        <version>1.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-lang3</artifactId>
+        <version>3.19.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.fasterxml.jackson.core</groupId>
+        <artifactId>jackson-annotations</artifactId>
+        <version>2.20</version>
+      </dependency>
+      <dependency>
+        <groupId>tools.jackson.core</groupId>
+        <artifactId>jackson-core</artifactId>
+        <version>3.0.2</version>
+      </dependency>
+      <dependency>
+        <groupId>tools.jackson.core</groupId>
+        <artifactId>jackson-databind</artifactId>
+        <version>3.0.2</version>
+      </dependency>
+
+      <!-- Dependencies specific to the legacy module -->
+      <dependency>
+        <!-- Uses legacy javax.xml.* namespace -->
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.1</version>
+      </dependency>
+      <dependency>
+        <!-- Uses legacy javax.xml.* namespace -->
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>jaxb-runtime</artifactId>
+        <version>2.3.9</version>
+      </dependency>
+      <dependency>
+        <!-- Uses jakarta.xml.* namespace -->
+        <groupId>jakarta.xml.bind</groupId>
+        <artifactId>jakarta.xml.bind-api</artifactId>
+        <version>4.0.2</version>
+      </dependency>
+      <dependency>
+        <!-- Uses jakarta.xml.* namespace -->
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>4.0.5</version>
+      </dependency>
+
+      <!-- Dependencies related specifically to unit testing -->
+      <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter</artifactId>
+        <version>6.0.1</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mockito</groupId>
+        <artifactId>mockito-core</artifactId>
+        <version>5.20.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>3.27.6</version>
+      </dependency>
+      <dependency>
+        <groupId>org.xmlunit</groupId>
+        <artifactId>xmlunit-assertj3</artifactId>
+        <version>2.11.0</version>
+      </dependency>
+      <dependency>
+        <groupId>net.javacrumbs.json-unit</groupId>
+        <artifactId>json-unit-assertj</artifactId>
+        <version>5.1.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.guava</groupId>
+        <artifactId>guava-testlib</artifactId>
+        <version>33.5.0-jre</version>
+      </dependency>
+
+      <!-- Plugins-for-plugins -->
+      <!-- These are listed here so that they are included when searching for newer versions -->
+      <dependency>
+        <groupId>com.google.errorprone</groupId>
+        <artifactId>error_prone_core</artifactId>
+        <version>${linters.errorprone.version}</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <defaultGoal>clean verify</defaultGoal>
+
     <plugins>
-      <!-- Enforce maven version -->
       <plugin>
+        <!-- Enforce maven version -->
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-enforcer-plugin</artifactId>
         <version>3.6.2</version>
@@ -207,101 +197,131 @@
             <configuration>
               <rules>
                 <requireMavenVersion>
-                  <version>3.6</version>
+                  <version>3.9.0</version>
                 </requireMavenVersion>
                 <requireJavaVersion>
-                  <version>${java.language.version}</version>
+                  <version>[${jdk.release},)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
           </execution>
         </executions>
       </plugin>
-
-      <!-- Basic plugins: -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
-        <configuration>
-          <showDeprecation>true</showDeprecation>
-          <showWarnings>true</showWarnings>
-          <source>${java.jdk.version}</source>
-          <target>${java.jdk.version}</target>
-          <fork>true</fork>
-          <compilerArgs>
-            <arg>-XDcompilePolicy=simple</arg>
-            <arg>-Xplugin:ErrorProne</arg>
-          </compilerArgs>
-          <annotationProcessorPaths>
-            <path>
-              <groupId>com.google.errorprone</groupId>
-              <artifactId>error_prone_core</artifactId>
-              <version>${linters.errorprone.version}</version>
-            </path>
-          </annotationProcessorPaths>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
-        <configuration>
-          <forkedProcessTimeoutInSeconds>60</forkedProcessTimeoutInSeconds>
-          <useUnlimitedThreads>true</useUnlimitedThreads>
-          <failIfNoTests>true</failIfNoTests>
-          <parallel>classes</parallel>
-          <runOrder>random</runOrder>
-          <useFile>false</useFile>
-        </configuration>
-      </plugin>
-
-      <!-- Static code analysis and mutation testing plugins: -->
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>${linters.spotbugs.plugin.version}</version>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <effort>Max</effort>
-          <threshold>Default</threshold>
-          <xmlOutput>true</xmlOutput>
-          <detail>true</detail>
-          <excludeFilterFile>${project.basedir}/src/ci/resources/spotbugs-exclude.xml</excludeFilterFile>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-pmd-plugin</artifactId>
-        <version>${linters.pmd.version}</version>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-              <goal>cpd-check</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <verbose>true</verbose>
-          <targetJdk>${java.jdk.version}</targetJdk>
-          <rulesets>
-            <ruleset>${project.basedir}/src/ci/resources/pmd.xml</ruleset>
-          </rulesets>
-        </configuration>
-      </plugin>
-
     </plugins>
-  </build>
 
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.19.1</version>
+          <configuration>
+            <!-- When scanning for upgrades ignore pre-release artifacts -->
+            <ignoredVersions>.*-M.*,.*-alpha.*</ignoredVersions>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.14.1</version>
+          <configuration>
+            <showDeprecation>true</showDeprecation>
+            <showWarnings>true</showWarnings>
+            <release>${jdk.release}</release>
+            <fork>true</fork>
+            <compilerArgs>
+              <!-- Contents of these arguments may not contain newlines, except at start and end. -->
+              <arg>-XDcompilePolicy=simple</arg>
+
+              <!-- error_prone & friends -->
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+              <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+              <arg>--should-stop=ifError=FLOW</arg>
+
+              <arg><![CDATA[
+              -Xplugin:ErrorProne -Xep:MissingSummary:OFF
+            ]]>
+              </arg>
+              <!-- /error_prone -->
+            </compilerArgs>
+            <annotationProcessorPaths>
+              <path>
+                <groupId>com.google.errorprone</groupId>
+                <artifactId>error_prone_core</artifactId>
+                <version>${linters.errorprone.version}</version>
+              </path>
+            </annotationProcessorPaths>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.5.4</version>
+          <configuration>
+            <forkedProcessTimeoutInSeconds>60</forkedProcessTimeoutInSeconds>
+            <useUnlimitedThreads>true</useUnlimitedThreads>
+            <failIfNoTests>true</failIfNoTests>
+            <parallel>classes</parallel>
+            <runOrder>random</runOrder>
+            <useFile>false</useFile>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>3.12.0</version>
+        </plugin>
+
+        <!-- Static code analysis and mutation testing plugins: -->
+        <plugin>
+          <groupId>com.github.spotbugs</groupId>
+          <artifactId>spotbugs-maven-plugin</artifactId>
+          <version>4.9.8.1</version>
+          <executions>
+            <execution>
+              <phase>verify</phase>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <effort>Max</effort>
+            <threshold>Default</threshold>
+            <xmlOutput>true</xmlOutput>
+            <detail>true</detail>
+            <excludeFilterFile>${project.basedir}/.mvn/plugins/spotbugs-exclude.xml</excludeFilterFile>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-pmd-plugin</artifactId>
+          <version>3.28.0</version>
+          <executions>
+            <execution>
+              <phase>verify</phase>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <verbose>true</verbose>
+            <targetJdk>${jdk.release}</targetJdk>
+            <rulesets>
+              <ruleset>${project.basedir}/.mvn/plugins/pmd.xml</ruleset>
+            </rulesets>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 </project>
